--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ip": "katyty.aternos.me",
-    "port": "56074",
-    "name": "kartik",
-    "password": "",
+    "ip": "game5.falix.cc:59941",
+    "port": "59941",
+    "name": "cooperniko",
+    "password": "Philjhon1122",
     "auto-night-skip": "false",
     "prefix": "",
     "login-enabled": "false",
